--- a/pages/10106.html
+++ b/pages/10106.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/5105/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/5105/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -485,7 +485,7 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>An isogeny is a rational <a class="existingWikiWord" href="/nlab/show/homomorphism">homomorphism</a> between <a class="existingWikiWord" href="/nlab/show/algebraic+groups">algebraic groups</a>. For <a class="existingWikiWord" href="/nlab/show/elliptic+curve">elliptic curves</a> this is equivalently a <a class="existingWikiWord" href="/nlab/show/surjection">surjection</a> that has a <a class="existingWikiWord" href="/nlab/show/finite+set">finite</a> <a class="existingWikiWord" href="/nlab/show/kernel">kernel</a>.</p>
+<p>An isogeny is a rational <a class="existingWikiWord" href="/nlab/show/homomorphism">homomorphism</a> between <a class="existingWikiWord" href="/nlab/show/algebraic+groups">algebraic groups</a>. For <a class="existingWikiWord" href="/nlab/show/elliptic+curve">elliptic curves</a>, <a class="existingWikiWord" href="/nlab/show/abelian+varieties">abelian varieties</a> of dimension 1, this is equivalently a <a class="existingWikiWord" href="/nlab/show/surjection">surjection</a> that has a <a class="existingWikiWord" href="/nlab/show/finite+set">finite</a> <a class="existingWikiWord" href="/nlab/show/kernel">kernel</a>.</p>
 
 <h2 id="references">References</h2>
 
@@ -510,14 +510,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  3, 2018 at 08:27:44.
+  Last revised on October  3, 2018 at 11:44:48.
   See the <a href="https://ncatlab.org/nlab/history/isogeny" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/isogeny" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/isogeny/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/isogeny" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/isogeny" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/isogeny" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/isogeny/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/isogeny" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/isogeny" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/isogeny/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
