--- a/pages/19747.html
+++ b/pages/19747.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      slope of line in nLab
+      slope of a line in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      slope of line
+      slope of a line
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9102/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9102/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -308,72 +308,67 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Contents</title></head>
-<body>
+    <p>
+</p>
+
 <blockquote>
-<p>This entry is about the concept in elementary <a class="existingWikiWord" href="/nlab/show/geometry">geometry</a>. For other notions of <em><a class="existingWikiWord" href="/nlab/show/slope">slope</a></em> see there.</p>
+<p>This entry is about the concept in elementary <a class='existingWikiWord' href='/nlab/show/geometry'>geometry</a>. For other notions of <em><a class='existingWikiWord' href='/nlab/show/slope'>slope</a></em> see there.</p>
 </blockquote>
-<hr />
-<h1 id="contents">Contents</h1>
-<div class='maruku_toc'>
-<ul>
-<li><a href='#idea'>Idea</a></li>
-<li><a href='#related_concepts'>Related concepts</a></li>
-<li><a href='#references'>References</a></li>
-</ul>
-</div>
+<hr/>
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
 
-<h2 id="idea">Idea</h2>
-
-<p>The <em>slope</em> of a line in the <a class="existingWikiWord" href="/nlab/show/Cartesian+space">Cartesian</a> <a class="existingWikiWord" href="/nlab/show/plane">plane</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℝ</mi> <mn>2</mn></msup></mrow><annotation encoding="application/x-tex">\mathbb{R}^2</annotation></semantics></math> given, in the canonical <a class="existingWikiWord" href="/nlab/show/coordinates">coordinates</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>x</mi><mo>,</mo><mi>y</mi><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><msup><mi>ℝ</mi> <mn>2</mn></msup><mo>→</mo><mi>ℝ</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(x,y \;\colon\; \mathbb{R}^2 \to \mathbb{R})</annotation></semantics></math> by the <a class="existingWikiWord" href="/nlab/show/equation">equation</a></p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>y</mi><mo>=</mo><msub><mi>y</mi> <mn>0</mn></msub><mo>+</mo><mi>s</mi><mo>⋅</mo><mi>x</mi></mrow><annotation encoding="application/x-tex">
+<p>The <em>slope</em> of a line in the <a class='existingWikiWord' href='/nlab/show/cartesian+space'>Cartesian</a> <a class='existingWikiWord' href='/nlab/show/plane'>plane</a> <math class='maruku-mathml' display='inline' id='mathml_0ca32b26bfbd44bf02079d52f0e27ac09d523858_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mn>2</mn></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^2</annotation></semantics></math> given, in the canonical <a class='existingWikiWord' href='/nlab/show/coordinate+system'>coordinates</a> <math class='maruku-mathml' display='inline' id='mathml_0ca32b26bfbd44bf02079d52f0e27ac09d523858_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>y</mi><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><msup><mi>ℝ</mi> <mn>2</mn></msup><mo>→</mo><mi>ℝ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(x,y \;\colon\; \mathbb{R}^2 \to \mathbb{R})</annotation></semantics></math> by the <a class='existingWikiWord' href='/nlab/show/equation'>equation</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_0ca32b26bfbd44bf02079d52f0e27ac09d523858_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>y</mi><mo>=</mo><msub><mi>y</mi> <mn>0</mn></msub><mo>+</mo><mi>s</mi><mo>⋅</mo><mi>x</mi></mrow><annotation encoding='application/x-tex'>
   y = y_0 + s \cdot x 
 
 </annotation></semantics></math></div>
-<p>is the factor <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>s</mi></mrow><annotation encoding="application/x-tex">s</annotation></semantics></math>.</p>
+<p>is the factor <math class='maruku-mathml' display='inline' id='mathml_0ca32b26bfbd44bf02079d52f0e27ac09d523858_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>s</mi></mrow><annotation encoding='application/x-tex'>s</annotation></semantics></math>.</p>
 
-<h2 id="related_concepts">Related concepts</h2>
+<h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/direction+of+a+vector">direction of a vector</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/direction+of+a+vector'>direction of a vector</a></p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/gradient">gradient</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/gradient'>gradient</a></p>
 </li>
 </ul>
 
-<h2 id="references">References</h2>
+<h2 id='references'>References</h2>
 
 <p>See also</p>
 
 <ul>
-<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Slope">Slope</a></em></li>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Slope'>Slope</a></em></li>
 </ul>
-</body></html>
 
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
   <p>
-  Created on October  3, 2018 at 10:45:38.
-  See the <a href="https://ncatlab.org/nlab/history/slope of line" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Last revised on October  3, 2018 at 11:24:33.
+  See the <a href="https://ncatlab.org/nlab/history/slope of a line" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/slope+of+line" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  | <a href="https://ncatlab.org/nlab/show/slope of line/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/slope+of+a+line" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/slope+of+a+line/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/slope+of+a+line" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/slope+of+a+line" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/slope of a line/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/slope+of+line" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/slope+of+a+line" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/slope+of+line" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/slope+of+a+line" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/slope+of+line" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/slope+of+a+line" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
