--- a/pages/6713.html
+++ b/pages/6713.html
@@ -916,6 +916,10 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Myers+effect">Myers effect</a></p>
 </li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Bridgeland+stability+condition">Bridgeland stability condition</a></p>
+</li>
 </ul>
 <p><strong>Table of <a class="existingWikiWord" href="/nlab/show/brane">branes</a> appearing in <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a>/<a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a></strong> (for classification see at <em><a class="existingWikiWord" href="/nlab/show/brane+scan">brane scan</a></em>).</p><table><thead><tr><th><a class="existingWikiWord" href="/nlab/show/brane">brane</a></th><th>in <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a></th><th><a class="existingWikiWord" href="/nlab/show/charge">charge</a>d under <a class="existingWikiWord" href="/nlab/show/gauge+field">gauge field</a></th><th>has <a class="existingWikiWord" href="/nlab/show/worldvolume">worldvolume</a> theory</th></tr></thead><tbody><tr><td style="text-align: left;"><strong><a class="existingWikiWord" href="/nlab/show/black+brane">black brane</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/higher+gauge+field">higher gauge field</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/SCFT">SCFT</a></td></tr>
 <tr><td style="text-align: left;"><strong><a class="existingWikiWord" href="/nlab/show/D-brane">D-brane</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/type+II+supergravity">type II</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/RR-field">RR-field</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/super+Yang-Mills+theory">super Yang-Mills theory</a></td></tr>
@@ -1268,14 +1272,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  2, 2018 at 07:40:52.
+  Last revised on October  3, 2018 at 12:10:06.
   See the <a href="https://ncatlab.org/nlab/history/D-brane" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/D-brane/62" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(62 revisions)</span> | <a href="/nlab/show/diff/D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/D-brane/63" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(63 revisions)</span> | <a href="/nlab/show/diff/D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/D-brane/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
