--- a/pages/17532.html
+++ b/pages/17532.html
@@ -668,7 +668,7 @@ margin-left: 0em;
 <div class="num_prop">
 <h6 id="proposition_2">Proposition</h6>
 
-<p>The inclusion <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>i</mi> <mi>G</mi></msub><mo>:</mo><mi>G</mi><mi>Set</mi><mo>→</mo><msup><mi>G</mi> <mi>δ</mi></msup><mi>Set</mi></mrow><annotation encoding="application/x-tex">i_G: G Set \to G^\delta Set</annotation></semantics></math> has a left adjoint <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>r</mi> <mi>G</mi></msub><mo>:</mo><msup><mi>G</mi> <mi>δ</mi></msup><mo>→</mo><mi>G</mi><mi>Set</mi></mrow><annotation encoding="application/x-tex">r_G: G^\delta \to G Set</annotation></semantics></math>.</p>
+<p>The inclusion <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>i</mi> <mi>G</mi></msub><mo>:</mo><mi>G</mi><mi>Set</mi><mo>→</mo><msup><mi>G</mi> <mi>δ</mi></msup><mi>Set</mi></mrow><annotation encoding="application/x-tex">i_G: G Set \to G^\delta Set</annotation></semantics></math> has a right adjoint <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>r</mi> <mi>G</mi></msub><mo>:</mo><msup><mi>G</mi> <mi>δ</mi></msup><mo>→</mo><mi>G</mi><mi>Set</mi></mrow><annotation encoding="application/x-tex">r_G: G^\delta \to G Set</annotation></semantics></math>.</p>
 </div>
 
 <div class="proof">
@@ -911,14 +911,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  1, 2018 at 14:01:39.
+  Last revised on October  3, 2018 at 15:49:17.
   See the <a href="https://ncatlab.org/nlab/history/category of G-sets" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/category+of+G-sets" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/category+of+G-sets/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/category+of+G-sets" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/category+of+G-sets" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/category+of+G-sets" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/category+of+G-sets/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/category+of+G-sets" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/category+of+G-sets" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/category of G-sets/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
