--- a/pages/15391.html
+++ b/pages/15391.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9104/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9104/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -558,6 +558,10 @@ margin-left: 0em;
 <li id="Kobayashi87">
 <p><a class="existingWikiWord" href="/nlab/show/Shoshichi+Kobayashi">Shoshichi Kobayashi</a>, <em>Differential geometry of complex vector bundles</em>, Princeton University Press (1987) (<a href="http://mathsoc.jp/publication/PublMSJ/PDF/Vol15.pdf">pdf</a>)</p>
 </li>
+
+<li id="LubkeTeleman95">
+<p><span class="newWikiWord">Martin Lübke<a href="/nlab/new/Martin+L%C3%BCbke">?</a></span>, and <span class="newWikiWord">Andrei Teleman<a href="/nlab/new/Andrei+Teleman">?</a></span>, <em>The Kobayashi-Hitchin correspondence</em>, World Scientific, 1995.</p>
+</li>
 </ul>
 </body></html>
 
@@ -565,7 +569,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  3, 2018 at 15:54:15.
+  Last revised on October  3, 2018 at 16:05:07.
   See the <a href="https://ncatlab.org/nlab/history/Kobayashi-Hitchin correspondence" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
