--- a/pages/10915.html
+++ b/pages/10915.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8177/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8177/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -329,7 +329,7 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>The <a class="existingWikiWord" href="/nlab/show/real+number">real number</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>π</mi><mo>∈</mo><mi>ℝ</mi></mrow><annotation encoding="application/x-tex">\pi \in \mathbb{R}</annotation></semantics></math> is the <a class="existingWikiWord" href="/nlab/show/length">length</a> of one <a class="existingWikiWord" href="/nlab/show/hemisphere">hemi-circle</a> of the <a class="existingWikiWord" href="/nlab/show/unit+circle">unit circle</a>. Hence <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mi>π</mi></mrow><annotation encoding="application/x-tex">2 \pi</annotation></semantics></math> is the circumference of the full <a class="existingWikiWord" href="/nlab/show/unit+circle">unit circle</a>.</p>
+<p>The <a class="existingWikiWord" href="/nlab/show/real+number">real number</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>π</mi><mo>∈</mo><mi>ℝ</mi></mrow><annotation encoding="application/x-tex">\pi \in \mathbb{R}</annotation></semantics></math> is the <a class="existingWikiWord" href="/nlab/show/length">length</a> of one <a class="existingWikiWord" href="/nlab/show/hemisphere">semi-circle</a> of the <a class="existingWikiWord" href="/nlab/show/unit+circle">unit circle</a>. Hence <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mi>π</mi></mrow><annotation encoding="application/x-tex">2 \pi</annotation></semantics></math> is the circumference of the full <a class="existingWikiWord" href="/nlab/show/unit+circle">unit circle</a>.</p>
 
 <p>This number plays a central role in <a class="existingWikiWord" href="/nlab/show/trigonometry">trigonometry</a>, but – especially via its relation to <a class="existingWikiWord" href="/nlab/show/complex+analysis">complex analysis</a> via <a class="existingWikiWord" href="/nlab/show/Euler%27s+formula">Euler's formula</a> – it also appears in many other situations.</p>
 
@@ -505,14 +505,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  4, 2018 at 01:56:16.
+  Last revised on October  4, 2018 at 02:22:09.
   See the <a href="https://ncatlab.org/nlab/history/pi" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/pi" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/pi/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/pi" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/pi" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/pi" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/pi/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/pi" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/pi" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/pi/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
