--- a/pages/7959.html
+++ b/pages/7959.html
@@ -1432,6 +1432,12 @@ margin-left: 0em;
 <li>Yang-Hui He, Seung-Joo Lee, Andre Lukas, Chuang Sun, <em>Heterotic Model Building: 16 Special Manifolds</em> (<a href="http://arxiv.org/abs/1309.0223">arXiv:1309.0223</a>)</li>
 </ul>
 
+<p>and a large class of <a class="existingWikiWord" href="/nlab/show/MSSM">MSSM</a>-like models is claimed in</p>
+
+<ul>
+<li id="CHE18">Andrei Constantin, Yang-Hui He, Andre Lukas, <em>Counting String Theory Standard Models</em> (<a href="https://arxiv.org/abs/1810.00444">arXiv:1810.00444</a>)</li>
+</ul>
+
 <p>Principles singling out heterotic models with three generations of fundamental particles are discussed in:</p>
 
 <ul>
@@ -1671,14 +1677,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 28, 2018 at 12:07:09.
+  Last revised on October  4, 2018 at 04:12:33.
   See the <a href="https://ncatlab.org/nlab/history/string phenomenology" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/string+phenomenology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/string+phenomenology/48" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(48 revisions)</span> | <a href="/nlab/show/diff/string+phenomenology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/string+phenomenology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/string+phenomenology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/string+phenomenology/49" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(49 revisions)</span> | <a href="/nlab/show/diff/string+phenomenology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/string+phenomenology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/string phenomenology/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
