--- a/pages/19759.html
+++ b/pages/19759.html
@@ -483,6 +483,7 @@ margin-left: 0em;
 <ul>
 <li><a href='#character_table'>Character table</a></li>
 </ul>
+<li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
 </ul>
 </div>
@@ -515,6 +516,12 @@ margin-left: 0em;
 </tbody></table><p><strong>References</strong></p><ul>
 <li>Groupnames, <em><a href="https://people.maths.bris.ac.uk/~matyd/GroupNames/1/GL(2,3).html">GL(2,3)</a></em></li>
 </ul>
+<h2 id="related_concepts">Related concepts</h2>
+
+<ul>
+<li><span class="newWikiWord">SL(2,3)<a href="/nlab/new/SL%282%2C3%29">?</a></span></li>
+</ul>
+
 <h2 id="references">References</h2>
 
 <ul>
@@ -526,7 +533,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on October  6, 2018 at 07:51:35.
+  Created on October  6, 2018 at 08:02:34.
   See the <a href="https://ncatlab.org/nlab/history/GL(2,3)" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
